<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_background"
    tools:context=".SignupFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="20dp"

        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/textView_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textColor="@color/indigo"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:drawableStart="@drawable/person_icon"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    />

                <EditText
                    android:id="@+id/editTextSurname"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:drawableStart="@drawable/person_icon"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/surname" />

                <EditText
                    android:id="@+id/editTextTextClub"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:drawableStart="@drawable/club_icon"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/club_name" />

                <CheckBox
                    android:id="@+id/Trainer_CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:checked="false"
                    android:text="@string/is_aTrainer" />

                <EditText
                    android:id="@+id/editTextTextEmailAddressSignup"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:autofillHints="emailAddress"
                    android:drawableStart="@drawable/email_icon"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:autofillHints="password"
                    android:drawableStart="@drawable/lock_icon"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword" />


                <EditText
                    android:id="@+id/editTextConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:autofillHints="password"
                    android:drawableStart="@drawable/lock_icon"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/signup_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/sign_up"/>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/dont_hava_account_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/have_account"/>
                    <TextView
                        android:id="@+id/login_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_toEndOf="@id/dont_hava_account_textView"
                        android:text="@string/login"
                        android:textColor="@color/indigo"/>
                </RelativeLayout>

            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</FrameLayout>