<resources>
    <string name="app_name">Team Supporter</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="graphic_person">person</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="have_account">Already have an account?</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="is_aTrainer">I\'m Trainer</string>
    <string name="password_reset">Password Restart</string>
    <string name="password_reset_info">Please provide the email address of the account for which you want to reset the password.</string>
    <string name="back">Back</string>
    <string name="restart">Restart</string>
    <string name="club_name">Club Name</string>
    <string name="profile_name">Name:</string>
    <string name="profile_surname">Surname:</string>
    <string name="profile_email">E-mail:</string>
    <string name="profile_role">Role:</string>
    <string name="profile_club">Club:</string>
    <string name="profile_logout">Logout</string>
    <string name="name_surname">Name Surname</string>
    <string name="member_role">Role</string>
    <string name="starting_line_up">Starting line-up:</string>
    <string name="select_player">Select player</string>
    <string name="bench">Bench:</string>
    <string name="exercise_name">Name</string>
    <string name="exercise_description">Description</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="members">members</string>
    <string name="exercises">exercises</string>
    <string name="training_plan">training plan</string>
    <string name="squad">squad</string>
    <string name="profile">profile</string>
    <string name="training_plan_title">Training Plan:</string>
    <string name="add_exercise_to_plan">Add exercise to plan</string>
    <string-array name="item_groups">
        <item>Warm up</item>
        <item>Technique</item>
        <item>Tactic</item>
        <item>Strength</item>
    </string-array>
</resources>