...
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/Forgotten_Password_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
...
                        android:layout_marginEnd="5dp"
                        android:text="@string/dont_have_account">

                    </TextView>

                    <TextView
                        android:id="@+id/sign_up_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_toEndOf="@id/dont_hava_account_textView"
                        android:text="@string/sign_up"
                        android:textColor="@color/indigo">
...
