...
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/password_reset_info" />

                <EditText
                    android:id="@+id/editTextTextForgottenEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:autofillHints="emailAddress"
...
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress" />

                <Button
                    android:id="@+id/password_restart_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/restart"
...
